--- a/tulu font/index.html
+++ b/tulu font/index.html
@@ -15,7 +15,7 @@
 </video>
 				<h1>tulu lipi eesqA</h1>
 </div>
-				<h3>eesqAXd eAlAy pricy</h3>
+				<h3>eesqAXd eAlAy epalbu(pricy)</h3>
 				<p> maetergAla esaelAmlu. AuMdu eesqA tUeyer msAtA jn btAtuepAprA. eeAqA eklevergA lipi FAader egatAtijAjMed kali tUdu FpaduepAprA.😆 melAljAji nm paetrAXga. yan dal mlAl evbAXeesqA mlApunaey AAtAtA. AaMwla puenpu (pArytAn) btAtini. bakid eesqAXdlk epalfu AAdupApMdA eAnAn eesq. <br> (AuMdu eesqA nnl pUtfi Aatiji) </p>
 
 <img src="./images/tclogo.png" class="image">
