--- a/tulu font/index.html
+++ b/tulu font/index.html
@@ -4,20 +4,22 @@
 <body>
 <div class="black">
 <div class="container red topBotomBordersOut text">
-  <a class="big">AilAlA</a>
-  <a class="big">mat brvu</a>
+  <a class="big button">AilAlA</a>
   <a class="big">eAMekAln begAg</a>
-
+  <br>
+  <a class="big">mat brvu</a>
+</div>
 
 <video autoplay muted loop id="myVideo">
   <source src="./gifs/flag-background.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
+<div class="heading">
+	<div class="a">
 				<h1>tulu lipi eesqA</h1>
+	</div>
 </div>
-				<h3>
-					<a>eesqAXd eAlAy epalbu(pricy)</a>
-	                       </h3>
+				<h3 class="trial">eesqAXd eAlAy pricy</h3>
 				<p> maetergAla esaelAmlu. AuMdu eesqA tUeyer msAtA jn btAtuepAprA. eeAqA eklevergA lipi FAader egatAtijAjMed kali tUdu FpaduepAprA.😆 melAljAji nm paetrAXga. yan dal mlAl evbAXeesqA mlApunaey AAtAtA. AaMwla puenpu (pArytAn) btAtini. bakid eesqAXdlk epalfu AAdupApMdA eAnAn eesq. <br> (AuMdu eesqA nnl pUtfi Aatiji) </p>
 
 <img src="./images/tclogo.png" class="image">
