--- a/tulu font/index.html
+++ b/tulu font/index.html
@@ -16,7 +16,7 @@
 </video>
 <div class="heading">
 	<div class="a">
-				<h1>dekhgo dekho kta wo afsa</h1>
+				<h1>tulu lipi eesqA</h1>
 	</div>
 </div>
 				<h3 class="trial">eesqAXd eAlAy pricy</h3>
