--- a/tulu font/Trial.html
+++ b/tulu font/Trial.html
@@ -14,7 +14,7 @@
 	</style>
 </head>
 <body>
-<img src="./images/tululipisite.png>
+<img src="./images/tululipisite.png">
 
 <h1>Disable right click and other things</h1>
 <p class="code">$t = date("H");<br>
