--- a/tulu font/index.html
+++ b/tulu font/index.html
@@ -15,7 +15,7 @@
     				<div class="menumenu">
    <a href="./index.html"><li>AilAlA</li></a>
    <a href="#"><li>eAMekAln begAg</li></a>    
-   <a href="#"><li>mat brvu</li></a>
+   <a href="./baravu.html"><li>mat brvu</li></a>
    <a href="#"><li>nmAm sMsAkRtid begAg brvu</li></a>
    <a href="#"><li>tululipi PaMqulu</li></a>
       
@@ -33,7 +33,7 @@
 </video>
   <img src="./images/tululipisite.png" alt="tululipisite" class="heading">
 				<h3 class="trial">eesqAXd eAlAy pricy</h3>
-				<p class="para"> maetergAla esaelAmlu. AuMdu eesqA tUeyer msAtA jn btAtuepAprA. eeAqA eklevergA lipi FAader egatAtijAjMed kali tUdu FpaduepAprA.😆 melAljAji nm paetrAXga. yan dal mlAl evbAXeesqA mlApunaey AAtAtA. AaMwla puenpu (pArytAn) btAtini. bakid eesqAXdlk epalfu AAdupApMdA eAnAn eesq. <br> (AuMdu eesqA nnl pUtfi Aatiji) </p>
+				<p class="para"> tulu baesgA tnAnen Aayin lipi eAaMji AitAtAMwla eklevaMji kareNadfu nmkA etriyMed medkA FpaMwu. AaMw AiMciepApad dienaqu tulunawAXdklAn AuEmdAXwA kuw eAar medkA Fpayin lipi lkAkAXdA AuMtudAMwA. tulunaewaemf tulu lipi buelcAcilAXla bari bIesawu AaevaMduMwu.... AAMcadA tululipit buelcAcilA AiMqrAXenqAXla Aaevawu pnApin diesqA AI eesqA mlAd.. AuMdu pUtifyadA tulu lipiqA mlAXdin surut eesqA, eAMekAln eesqAXgA niekAlnA FmaekwA eAedAkanuv.. <br> (AuMdu eesqA nnl pUtfi Aatiji) </p>
 				<h2>AI eesqAXwA dad mat AuMwu</h2>
 							<ol>
 								<li>tululipi caqfA</li>
