--- a/tulu font/triallab/loader.html
+++ b/tulu font/triallab/loader.html
@@ -63,7 +63,7 @@
   </head>
   <body>
     <div class="content">
-      <img src="https://picsum.photos/300/300/?random" />
+      <h1>hello</h1>
     </div>
     <div class="loader-wrapper">
       <span class="loader"><span class="loader-inner"></span></span>
